--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/birthday-user-settings/birthday-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/birthday-user-settings/birthday-user-settings.component.html
@@ -1,4 +1,4 @@
-<div class="data">
+<div class="data service-selects">
   <div class="day">
     <mat-select name="day"  [(ngModel)]="userSettingsModel.birthDay.day" (ngModelChange)="filterChanhe()">
       <ng-container *ngFor="let day of days, let i = index">
