change work-logic of catalog

--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.html
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.html
@@ -3,15 +3,15 @@
   <div class="cards-list" *ngIf="offersList">
     <div class="card" *ngFor="let offer of offersList.data">
       <div class="card-preview__bg">
-        <img class="card-preview" src="/assets/images/preview.png">
+        <img class="card-preview" (click)="openOffer(offer.id)" src="/assets/images/preview.png" [src]="'https://www.thecubetest.site/Backend/storage/app/' + offer.mainImage">
       </div>
       <div class="card-description">
 
         <div class="card-description__top">
-          <div class="card-description__ava"><img *ngIf="offer.name" [src]="'https://www.thecubetest.site/Backend/storage/app/' + offer.user.avatar" alt="avatar">
+          <div class="card-description__ava"><img *ngIf="offer.user.avatar" [src]="'https://www.thecubetest.site/Backend/storage/app/' + offer.user.avatar" alt="avatar">
           </div>
           <div>
-            <span class="card-description__name" (click)="openOffer(offer.user.id)">{{offer.user.name}} {{offer.user.surname}}</span>
+            <span class="card-description__name" (click)="openOffer(offer.id)">{{offer.user.name}} {{offer.user.surname}}</span>
             <div class="card-description__skill">{{offer.user.rank_id}}</div>
           </div>
         </div>
