--- a/src/app/catalog-page/categorys-catalog-page/categorys-catalog-page.component.html
+++ b/src/app/catalog-page/categorys-catalog-page/categorys-catalog-page.component.html
@@ -21,8 +21,8 @@
 
     <div class="subcategories-list" *ngIf="subcategoriesList">
       <div class="subcategory-full" *ngFor="let sub_categories of subcategoriesList.sub_categories">
-        <div class="subcategory-full-img">
-          <img src="{{ sub_categories.img }}" alt="{{ sub_categories.name }}">
+        <div class="subcategory-full-img" [routerLink]="['/catalog', subcategoriesList.link , sub_categories.link] | localize">
+          <img [src]="'https://www.thecubetest.site/Backend/storage/app' + sub_categories.img" alt="{{ sub_categories.name }}">
         </div>
         <h2 class="subcategory-full-title"><a
             [routerLink]="['/catalog', subcategoriesList.link , sub_categories.link] | localize">
