--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/general-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/general-user-settings.component.html
@@ -1,2 +1,3 @@
 
 <app-main-user-settings *ngIf="userSettingsModel" [userSettingsModel]="userSettingsModel"></app-main-user-settings>
+<app-location-language-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel"></app-location-language-user-settings>
