--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
@@ -22,7 +22,7 @@
   //   margin-right: 0;
   // }
   &-preview {
-
+    cursor: pointer;
     &__bg {
       height: 220px;
       box-shadow: 0px 0px 4px rgba(199, 213, 255, 0.55);
