--- a/src/app/catalog-page/categorys-catalog-page/categorys-catalog-page.component.scss
+++ b/src/app/catalog-page/categorys-catalog-page/categorys-catalog-page.component.scss
@@ -107,6 +107,7 @@
       box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
       border-radius: 3px;
       background-color: #fff;
+      cursor: pointer;
     }
     &-title{
       margin: 0;
