--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/location-language-user-settings/location-language-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/location-language-user-settings/location-language-user-settings.component.html
@@ -7,12 +7,12 @@
 
       <div class="field-block">
         <h5 class="fields-title">Страна</h5>
-        <input class="fields-value" type="text">
+        <input class="fields-value" type="text" [(ngModel)]="userSettings.country">
       </div>
 
       <div class="field-block">
         <h5 class="fields-title">Город</h5>
-        <input class="fields-value" type="text">
+        <input class="fields-value" type="text" [(ngModel)]="userSettings.city">
       </div>
 
       <div class="field-block-multiple">
@@ -25,8 +25,8 @@
           <div class="field-block language-level">
             <label class="block-title" for="langLevel">Уровень владения</label>
             <mat-select name="langLevel" id="langLevel" [(ngModel)]="userSettings.languages[i].langLevel">
-              <ng-container *ngFor="let level of languagesLevel">
-                <mat-option [value]="level">{{ level }}</mat-option>
+              <ng-container *ngFor="let langLevel of languagesLevel">
+                <mat-option [value]="langLevel">{{ langLevel }}</mat-option>
               </ng-container>
             </mat-select>
           </div>
