--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/location-language-user-settings/location-language-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/location-language-user-settings/location-language-user-settings.component.scss
@@ -39,10 +39,16 @@
 .field-block-multiple{
   width: 100%;
   display: flex;
+  flex-direction: column;
   margin-bottom: 50px;
-  margin-top: 20px;
+  // margin-top: 20px;
   position: relative;
   justify-content: space-between;
+  .single-lang-wrapper{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
   .add-languahe{
     position: absolute;
     bottom: -50px;
@@ -53,7 +59,7 @@
   }
   .delete-languahe{
     position: absolute;
-    top: 50%;
+    bottom: 10px;
     right: -40px;
   }
   .block-title{
