--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/user-settings-dashboard.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/user-settings-dashboard.component.html
@@ -1,12 +1,15 @@
-<h1>Настройки</h1>
+<div class="user-settings-wrapper">
+  <h1>Настройки</h1>
 
-<mat-tab-group class="tabs" animationDuration="2000ms" mat-align-tabs="center" >
-  <mat-tab label="Общие">
-    <app-general-user-settings *ngIf="userSettingsModel" [userSettingsModel]="userSettingsModel"></app-general-user-settings>
-  </mat-tab>
-  <mat-tab label="Финансы"></mat-tab>
-  <mat-tab label="Уведомления"></mat-tab>
-  <mat-tab label="Безопасность"></mat-tab>
-</mat-tab-group>
+  <mat-tab-group class="tabs" animationDuration="2000ms" mat-align-tabs="center" >
+    <mat-tab label="Общие">
+      <app-general-user-settings *ngIf="userSettingsModel" [userSettingsModel]="userSettingsModel"></app-general-user-settings>
+    </mat-tab>
+    <mat-tab label="Финансы"></mat-tab>
+    <mat-tab label="Уведомления"></mat-tab>
+    <mat-tab label="Безопасность"></mat-tab>
+  </mat-tab-group>
+</div>
+
 
 
