--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/user-settings-dashboard.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/user-settings-dashboard.component.scss
@@ -1,7 +1,6 @@
-.user-settings-wrapper{
-  // overflow: scroll;
-  padding-bottom: 100px;
-}
+// .user-settings-wrapper{
+//   padding-bottom: 100px;
+// }
 h1{
   font-style: normal;
   font-weight: bold;
