--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/location-language-user-settings/location-language-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/location-language-user-settings/location-language-user-settings.component.scss
@@ -48,8 +48,14 @@
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    &:last-child{
+      .add-languahe, .delete-languahe{
+        display: block;
+      }
+    }
   }
   .add-languahe{
+    display: none;
     position: absolute;
     bottom: -50px;
     left: 0;
@@ -58,9 +64,11 @@
     }
   }
   .delete-languahe{
+    display: none;
     position: absolute;
     bottom: 10px;
     right: -40px;
+    cursor: pointer;
   }
   .block-title{
     margin-bottom: 4px;
@@ -82,7 +90,7 @@
       border: none;
       width: 12px;
       height: 8px;
-      background-image: url(/assets/images/svg/settings/arrow-down.svg);
+      background-image: url(/assets/images/svg/settings-page/arrow-down.svg);
       background-repeat: no-repeat;
       background-position: center;
     }
