--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper" *ngIf="user">
   <header>
     <a [routerLink]="'/' | localize" class="logo">whocan</a>
     <div class="controls">
