--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/last-step-creation/last-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/last-step-creation/last-step-creation.component.html
@@ -10,7 +10,7 @@
           </p>
       </section>
       <div class="form-butons">
-        <button class="back" >сохранить и выйти</button>
+        <button class="back" (click)="roureToServices()">сохранить и выйти</button>
         <button class="save" (click)="publishOffer()">опубликовать</button>
       </div>
     </form>
