--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
@@ -1,3 +1,9 @@
+.step-wrapper {
+  height: 100%;
+  overflow: auto;
+  padding-bottom: 35px;
+  padding-right: 38px;
+}
 h3 {
   margin-bottom: 19px;
   margin-top: 0;
@@ -307,6 +313,7 @@ form::ng-deep {
 .items {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   .img-item {
     width: 198px;
     height: 198px;
