--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/education-user-settings/education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/education-user-settings/education-user-settings.component.html
@@ -12,45 +12,51 @@
           <input class="fields-value" type="text" [(ngModel)]="userSettings.education[i].institution">
         </div>
 
-        <div class="academicBlock">
-          <div class="field-block academic-degrees service-selects">
-            <label class="block-title" for="academicDegree">Учёная степень</label>
-            <mat-select name="academicDegree" id="academicDegree" [(ngModel)]="userSettings.education[i].academicDegree">
-              <ng-container *ngFor="let academicDegree of academicDegrees">
-                <mat-option [value]="academicDegree">{{ academicDegree }}</mat-option>
-              </ng-container>
-            </mat-select>
+        <div class="toggle_block" [ngClass]="{ hidden: openItem !== i }">
+          <div class="academicBlock">
+            <div class="field-block academic-degrees service-selects">
+              <label class="block-title" for="academicDegree">Учёная степень</label>
+              <mat-select name="academicDegree" id="academicDegree" [(ngModel)]="userSettings.education[i].academicDegree">
+                <ng-container *ngFor="let academicDegree of academicDegrees">
+                  <mat-option [value]="academicDegree">{{ academicDegree }}</mat-option>
+                </ng-container>
+              </mat-select>
+            </div>
+            <div class="field-block">
+              <h5 class="fields-title">Специальность</h5>
+              <input class="fields-value" type="text" [(ngModel)]="userSettings.education[i].specialty">
+            </div>
           </div>
-          <div class="field-block">
-            <h5 class="fields-title">Специальность</h5>
-            <input class="fields-value" type="text" [(ngModel)]="userSettings.education[i].specialty">
+
+          <div class="studyPeriod">
+            <div class="field-block service-selects">
+              <label class="block-title" for="startEducation">Год старта</label>
+              <mat-select name="startEducation" id="startEducation" [(ngModel)]="userSettings.education[i].startEducation">
+                <ng-container *ngFor="let startEducation of createYears()">
+                  <mat-option [value]="startEducation">{{ startEducation }}</mat-option>
+                </ng-container>
+              </mat-select>
+            </div>
+            <div class="field-block service-selects">
+              <label class="block-title" for="startEducation">Год окончания</label>
+              <mat-select name="startEducation" id="startEducation" [(ngModel)]="userSettings.education[i].finishEducation">
+                <ng-container *ngFor="let finishEducation of createYears()">
+                  <mat-option [value]="finishEducation">{{ finishEducation }}</mat-option>
+                </ng-container>
+              </mat-select>
+            </div>
           </div>
+
+          <div class="add-photos">
+            <button class="add btn-tetraty">
+              <span>Загрузить файл/фото диплома</span>
+            </button>
+          </div>
+
+          <button type="button" class="change"><i class="material-icons create"
+            (click)="chooseItem(i)">create</i></button>
         </div>
 
-        <div class="studyPeriod">
-          <div class="field-block service-selects">
-            <label class="block-title" for="startEducation">Год старта</label>
-            <mat-select name="startEducation" id="startEducation" [(ngModel)]="userSettings.education[i].startEducation">
-              <ng-container *ngFor="let startEducation of createYears()">
-                <mat-option [value]="startEducation">{{ startEducation }}</mat-option>
-              </ng-container>
-            </mat-select>
-          </div>
-          <div class="field-block service-selects">
-            <label class="block-title" for="startEducation">Год окончания</label>
-            <mat-select name="startEducation" id="startEducation" [(ngModel)]="userSettings.education[i].finishEducation">
-              <ng-container *ngFor="let finishEducation of createYears()">
-                <mat-option [value]="finishEducation">{{ finishEducation }}</mat-option>
-              </ng-container>
-            </mat-select>
-          </div>
-        </div>
-
-        <div class="add-photos">
-          <button class="add btn-tetraty">
-            <span>Загрузить файл/фото диплома</span>
-          </button>
-        </div>
 
         <div class="add-education">
           <button class="add btn-tetraty" (click)="addEducation()" >
