--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/location-language-user-settings/location-language-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/location-language-user-settings/location-language-user-settings.component.html
@@ -39,7 +39,7 @@
               <span>Добавить язык</span>
             </button>
           </div>
-          <div class="delete-languahe">
+          <div class="delete-language">
             <i class="material-icons" (click)="deleteMainOption(i)">delete</i>
           </div>
         </div>
