--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.scss
@@ -73,6 +73,7 @@
 }
 .field-block-multiple{
   max-width: 630px;
+  position: relative;
   .field-block{
     margin-bottom: 25px;
   }
@@ -174,11 +175,12 @@
 .add-photos{
   width: auto;
   display: flex;
-  margin-bottom: 10px;
-  // margin-left: 30px;
+  margin-bottom: 20px;
+  margin-top: 10px;
   button {
     padding-left: 30px;
     position: relative;
+    color: #3C7EEA;
     &::before{
       position: absolute;
       content: "";
@@ -191,6 +193,9 @@
       background-repeat: no-repeat;
       background-size: contain;
     }
+    &:hover{
+      color: #5695fd;
+    }
   }
 }
 .add-education{
@@ -198,15 +203,22 @@
   position: absolute;
   bottom: -20px;
   left: 0;
-  .btn-tetraty{
-    padding: 0;
-  }
+  color: #3C7EEA;
+  padding: 0;
   span{
     padding-left: 10px;
+    white-space: nowrap;
+  }
+  i{
+    font-size: 20px;
+    position: relative;
+    top: 4px;
+  }
+  &:hover{
+    color: #5695fd;
   }
 }
 .delete-education{
-  display: none;
   position: absolute;
   top: 35px;
   right: -50px;
@@ -216,9 +228,58 @@
 .single-additional-education-block{
   position: relative;
   padding-bottom: 30px;
+  .toggle_block{
+    height: auto;
+    // margin-bottom: 5px;
+    &.hidden{
+      height: 0;
+      overflow: hidden;
+    }
+  }
+  &::after{
+    content: "";
+    position: absolute;
+    bottom: 25px;
+    height: 1px;
+    width: 130%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #F4F7FC;
+  }
   &:last-child{
     .delete-education, .add-education{
       display: block;
+    }
+  }
+}
+
+
+button {
+  border: none;
+  background: none;
+  margin-right: 22px;
+  color: #C2CFE0;
+  padding: 0;
+  cursor: pointer;
+  position: absolute;
+  &>i {
+    font-size: 17px;
+  }
+  &.change{
+    top: 40px;
+    right: -70px;
+    &:hover {
+      color: #3C7EEA;
+    }
+  }
+  &.delete-education{
+    top: 38px;
+    right: -115px;
+    &>i {
+      font-size: 22px;
+    }
+    &:hover {
+      color: #FF647C;
     }
   }
 }
