--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/education-user-settings/education-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/education-user-settings/education-user-settings.component.scss
@@ -15,7 +15,7 @@
     }
   }
   &__fields{
-    padding: 50px 0 90px;
+    padding: 50px 0 70px;
     width: 75%;
   }
 }
@@ -111,6 +111,10 @@
   .toggle_block{
     height: auto;
     margin-bottom: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
     &.hidden{
       height: 0;
       overflow: hidden;
@@ -193,51 +197,24 @@
 }
 //---------------------------end selects styling -----------------------------
 
-.add-photos{
-  width: auto;
-  display: flex;
-  margin-bottom: 10px;
-  // margin-left: 30px;
-  button {
-    padding-left: 30px;
-    position: relative;
-    &::before{
-      position: absolute;
-      content: "";
-      top: 50%;
-      left: 0;
-      transform: translateY(-50%);
-      height: 18px;
-      width: 19px;
-      background-image: url(/assets/images/svg/settings-page/clip.svg);
-      background-repeat: no-repeat;
-      background-size: contain;
-    }
-  }
-}
-
 .add-education{
   display: none;
   position: absolute;
-  bottom: -50px;
+  bottom: -35px;
   left: 0;
+  button{
+    color: #3C7EEA;
+    &:hover{
+      color: #5695fd;
+    }
+  }
   span{
     padding-left: 10px;
+    width: max-content;
   }
-}
-.delete-education{
-  display: none;
-  position: absolute;
-  top: 35px;
-  right: -50px;
-  cursor: pointer;
-}
-
-.change{
-  display: block;
-  position: absolute;
-  top: 40px;
-  right: -60px;
+  .material-icons{
+    font-size: 20px;
+  }
 }
 
 button {
@@ -247,13 +224,129 @@ button {
   color: #C2CFE0;
   padding: 0;
   cursor: pointer;
+  position: absolute;
   &>i {
     font-size: 17px;
   }
-  &.change:hover {
-    color: #3C7EEA;
+  &.change{
+    top: 40px;
+    right: -70px;
+    &:hover {
+      color: #3C7EEA;
+    }
   }
-  &.delete:hover {
-    color: #FF647C;
+  &.delete-education{
+    top: 38px;
+    right: -115px;
+    &>i {
+      font-size: 22px;
+    }
+    &:hover {
+      color: #FF647C;
+    }
+  }
+}
+
+
+.add-photos{
+  width: auto;
+  display: flex;
+  margin-bottom: 10px;
+  position: relative;
+  color: #3C7EEA;
+  &::before{
+    position: absolute;
+    content: "";
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    height: 18px;
+    width: 19px;
+    background-image: url(/assets/images/svg/settings-page/clip.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  &:hover{
+    color: #5695fd;
+  }
+
+  .input-file {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+
+    & + label {
+      cursor: pointer;
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 33px;
+      text-align: center;
+      color: #3c7eea;
+      padding-left: 30px;
+    }
+    &:hover{
+      label {
+        color: #5695fd;
+      }
+    }
+  }
+}
+
+// ---------------------------file upload form ---------------------------
+.items {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  .img-item {
+    width: 197px;
+    height: 197px;
+    margin-right: 3%;
+    margin-bottom: 20px;
+    position: relative;
+    button.delete-file {
+      position: absolute;
+      height: 24px;
+      width: 24px;
+      border-radius: 50%;
+      background-color: #fff;
+      border: none;
+      box-shadow: none;
+      right: 13px;
+      top: 13px;
+      outline: none;
+      padding: 0;
+      cursor: pointer;
+      outline: none;
+      margin-right: 0;
+      &:before {
+        position: absolute;
+        content: "\e900";
+        font-size: 18px;
+        font-family: "icomoon";
+        transform: translate(-50%, -50%);
+        color: red;
+      }
+    }
+    &:nth-child(3n + 3) {
+      margin-right: 0;
+    }
+    &:before {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      border: 2px dashed #dce0e6;
+    }
+  }
+  img {
+    object-fit: contain;
+    width: 196px;
+    height: 196px;
+    padding: 2px;
   }
 }
