--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/general-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/general-user-settings.component.html
@@ -3,3 +3,4 @@
 <app-location-language-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel"></app-location-language-user-settings>
 <app-education-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel"></app-education-user-settings>
 <app-additional-education-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel"></app-additional-education-user-settings>
+<button type="submit" class="save-all">сохранить изменения</button>
