--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/education-user-settings/education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/education-user-settings/education-user-settings.component.html
@@ -5,7 +5,7 @@
   <div class="inform_section__fields">
     <div class="field-block-multiple">
 
-      <div class="single-education-block" *ngFor="let arrayItem of userSettings.education; let i = index" >
+      <div class="single-education-block" *ngFor="let arrayItem of userSettings.education; let i = index">
 
         <div class="field-block">
           <h5 class="fields-title">Учебное заведение</h5>
@@ -16,7 +16,8 @@
           <div class="academicBlock">
             <div class="field-block academic-degrees service-selects">
               <label class="block-title" for="academicDegree">Учёная степень</label>
-              <mat-select name="academicDegree" id="academicDegree" [(ngModel)]="userSettings.education[i].academicDegree">
+              <mat-select name="academicDegree" id="academicDegree"
+                [(ngModel)]="userSettings.education[i].academicDegree">
                 <ng-container *ngFor="let academicDegree of academicDegrees">
                   <mat-option [value]="academicDegree">{{ academicDegree }}</mat-option>
                 </ng-container>
@@ -31,17 +32,20 @@
           <div class="studyPeriod">
             <div class="field-block service-selects">
               <label class="block-title" for="startEducation">Год старта</label>
-              <mat-select name="startEducation" id="startEducation" [(ngModel)]="userSettings.education[i].startEducation" (ngModelChange)="setMaxYear(i)">
-                <ng-container *ngFor="let startEducation of createYears()">
-                  <mat-option [value]="startEducation" *ngIf="startEducation < minYear">{{ startEducation }}</mat-option>
+              <mat-select name="startEducation" id="startEducation"
+                [(ngModel)]="userSettings.education[i].startEducation">
+                <ng-container *ngFor="let startEducation of yearsArr">
+                  <mat-option [value]="startEducation">{{ startEducation }}</mat-option>
                 </ng-container>
               </mat-select>
             </div>
             <div class="field-block service-selects">
               <label class="block-title" for="startEducation">Год окончания</label>
-              <mat-select name="startEducation" id="startEducation" [(ngModel)]="userSettings.education[i].finishEducation" (ngModelChange)="setMinYear(i)">
-                <ng-container *ngFor="let finishEducation of createYears()">
-                  <mat-option [value]="finishEducation" *ngIf="finishEducation > maxYear">{{ finishEducation }}</mat-option>
+              <mat-select name="startEducation" id="startEducation"
+                [(ngModel)]="userSettings.education[i].finishEducation">
+                <ng-container *ngFor="let finishEducation of yearsArr">
+                  <mat-option [value]="finishEducation" *ngIf="finishEducation > yearsFiltered">{{ finishEducation }}
+                  </mat-option>
                 </ng-container>
               </mat-select>
             </div>
@@ -50,9 +54,7 @@
           <div class="items">
             <ng-container *ngIf="previewUrl">
               <div class="img-item" *ngFor="let imgUrl of previewUrl, let i = index">
-                <button class="delete-file" (click)="deleteAttachment(imgUrl.id)">
-
-                </button>
+                <button class="delete-file" (click)="deleteAttachment(imgUrl.id)"></button>
                 <img [src]="'https://www.thecubetest.site/Backend/storage/app/' + imgUrl.diploma" height="300" />
               </div>
 
@@ -61,7 +63,7 @@
 
           <div class="add-photos">
             <input type="file" id="diplomaFiles" multiple="true" class="input-file" #fileInput
-            (change)="fileProgress($event.target.files)" />
+              (change)="fileProgress($event.target.files)" />
             <label for="diplomaFiles">Загрузить файл/фото диплома</label>
 
             <!-- <button class="add btn-tetraty">
@@ -70,12 +72,12 @@
           </div>
 
           <button type="button" class="change"><i class="material-icons create"
-            (click)="chooseItem(i)">create</i></button>
+              (click)="chooseItem(i)">create</i></button>
         </div>
 
 
         <div class="add-education">
-          <button class="add btn-tetraty" (click)="addEducation(i+1)" >
+          <button class="add btn-tetraty" (click)="addEducation(i+1)">
             <i class="material-icons">
               add_circle_outline
             </i>
